# pedalboard_ros

effects/: CMakeLists.txt  package.xml
effects/launch/: example.launch.xml
effects/src/: cabinet_sim.cpp  delay.cpp  distortion.cpp  passthrough.cpp
junction_box/: CMakeLists.txt  package.xml
junction_box/src/: junction_box.cpp
pedalboard_msgs/: CMakeLists.txt  package.xml
pedalboard_msgs/msg/: AudioSample.msg
